# report_and_deck_creator_flow

./: .env.example  README.md  puppeteer-config.json  pyproject.toml  shell.pptx
src/report_and_deck_creator_flow/: main.py  types.py
src/report_and_deck_creator_flow/crews/outline_report_crew/: outline_report_crew.py
src/report_and_deck_creator_flow/crews/outline_report_crew/config/: agents.yaml  tasks.yaml
src/report_and_deck_creator_flow/crews/report_outline_crew/: report_outline_crew.py
src/report_and_deck_creator_flow/crews/report_section_builder_crew/: report_section_builder_crew.py
src/report_and_deck_creator_flow/crews/report_section_builder_crew/config/: agents.yaml  tasks.yaml
src/report_and_deck_creator_flow/crews/slide_deck_builder_crew/: slide_deck_builder_crew.py
src/report_and_deck_creator_flow/crews/slide_deck_builder_crew/config/: agents.yaml  tasks.yaml
src/report_and_deck_creator_flow/crews/slide_deck_intro_outro_crew/: slide_deck_intro_outro_crew.py
src/report_and_deck_creator_flow/crews/slide_deck_intro_outro_crew/config/: agents.yaml  tasks.yaml
src/report_and_deck_creator_flow/crews/slide_deck_section_builder_crew/: slide_deck_section_builder_crew.py
src/report_and_deck_creator_flow/crews/slide_deck_section_builder_crew/config/: agents.yaml  tasks.yaml
src/report_and_deck_creator_flow/crews/write_report_section_crew/: write_report_section_crew.py
src/report_and_deck_creator_flow/crews/write_report_section_crew/config/: agents.yaml  tasks.yaml
src/report_and_deck_creator_flow/slides_lib/: slides.py
