[project]
name = "report_and_deck_creator_flow"
version = "0.1.0"
description = "report_and_deck_creator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "exa-py>=1.9.1",
    "python-pptx>=1.0.2",
]

[project.scripts]
kickoff = "report_and_deck_creator_flow.main:kickoff"
run_crew = "report_and_deck_creator_flow.main:kickoff"
plot = "report_and_deck_creator_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
